k8s/ingress-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: nginx-test
spec:
  selector:
    app: hello-app
  ports:
  - port: 80
    targetPort: 8080
